--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "tsc": "tsc",
     "build": "npm-run-all clean lint tsc",
     "dev:start": "npm-run-all build start",
-    "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
+    "dev": "nodemon --watch src -e ts,js --exec npm run dev:start",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Luís Tchitue",
   "license": "ISC",
@@ -22,12 +22,15 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.6.1",
     "fs-extra": "^10.0.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
+    "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
