Fase 5 de Automação - altera o config.yml para despoletar um deploy para heroku através do CircleCI

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "tsc": "tsc",
     "build": "npm-run-all clean lint tsc",
     "dev:start": "npm-run-all build start",
+    "prestart": "npm run build ",
     "dev": "nodemon --watch src -e ts,js --exec npm run dev:start",
-    "start": "node .",
+    "start": "node dist/index.js",
     "test": "jest"
   },
   "author": "Luís Tchitue",
