--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "prestart": "npm run build ",
     "dev": "nodemon --watch src -e ts,js --exec npm run dev:start",
     "start": "node dist/index.js",
-    "build": "npm-run-all lint tsc",
+    "build": "tsc",
     "test": "jest"
   },
   "author": "Luís Tchitue",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "npm-run-all": "^4.1.5",
     "express": "^4.17.1"
   },
   "engines": {
@@ -30,6 +29,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.1",
     "fs-extra": "^10.0.0",
+    "npm-run-all": "^4.1.5",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "rimraf": "^3.0.2",
