--- a/package.json
+++ b/package.json
@@ -24,14 +24,20 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.1",
     "fs-extra": "^10.0.0",
-    "npm-run-all": "^4.1.5",
+    "husky": "^7.0.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
+  },
+  "husky" : {
+    "hooks" : {
+      "pre-commit" : "echo \"[Husky] pre-commit\""
+    }
   }
 }
