--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   },
-  "husky" : {
-    "hooks" : {
-      "pre-commit": "echo \"[Husky] pre-commit\""
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm tsc"
     }
   }
 }
