--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:start": "npm-run-all build start",
     "dev": "nodemon --watch src -e ts,js --exec npm run dev:start",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "author": "Luís Tchitue",
   "license": "ISC",
@@ -24,7 +25,6 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.1",
     "fs-extra": "^10.0.0",
-    "husky": "^7.0.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
@@ -33,11 +33,7 @@
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm tsc"
-    }
+    "typescript": "^4.3.5",
+    "husky": "^7.0.0"
   }
 }
