--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,10 @@ orbs:
 workflows:
   heroku_deploy:
     jobs:
-      - node/test:
-          version: '14.16.1'
       - heroku/deploy-via-git
+        requires:
+             - node/test:
+                 version: '14.16.1'
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
           # https://circleci.com/developer/images/image/cimg/node
