--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,14 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
 
 orbs:
   node: circleci/node@4.1
   heroku: circleci/heroku@0.0.10
-  
 workflows:
   heroku_deploy:
     jobs:
-      - heroku/deploy-via-git
-        requires:
-             - node/test:
-                 version: '14.16.1'
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
+      - node/test:
+          version: '14.16.1'
+      - heroku/deploy-via-git:
+          requires:
+              - node/test
+     
